# introduction-to-maven-plugin

./: .gitignore  README.md
area-of-interest/backend/graphql-java/hello-graphql/: README.md  pom.xml
area-of-interest/backend/graphql-kotlin/hello-graphql-kotlin/: .gitignore  HELP.md  build.gradle.kts
area-of-interest/backend/node/00_express/: package-lock.json  package.json
area-of-interest/backend/node/node-debugging/: README.md  package-lock.json  package.json
area-of-interest/backend/node/node-docker-template/: Dockerfile  package-lock.json  package.json
area-of-interest/backend/node/node-generic-template/: package.json
area-of-interest/backend/node/node-hapi-simple-template/: package-lock.json  package.json
area-of-interest/backend/node/node-jest/: jest.config.js  package-lock.json  package.json
area-of-interest/backend/node/node-jest-integration/: jest.config.js  package-lock.json  package.json
area-of-interest/data-science/notebooks/test-notebook/: Untitled.ipynb
language-and-framework/lang/asm/: hello.asm
language-and-framework/lang/c/adtlist/: Makefile
language-and-framework/lang/c/etna/src/: Makefile  Makefile.am  Makefile.in  adtlist.c  adtlist.h  config.h  elaborazione.c  elaborazione.h  etna  etna.c  etna.h  trasmissione.c  trasmissione.h  wrapper.c  wrapper.h
language-and-framework/lang/c/etna/src/.deps/: adtlist.Po  elaborazione.Po  etna.Po  wrapper.Po
language-and-framework/lang/swift/: .gitignore
other/archive/lisp/: es3_associa.lsp  funzionibase.lisp  mdt_somma2.lisp
other/challenges/projecteuler.net/: .gitignore  build.sh
(+444 files in other folders)
